--- a/src/assets/scss/bootstrap/utilities/_background.scss
+++ b/src/assets/scss/bootstrap/utilities/_background.scss
@@ -10,6 +10,15 @@
   }
 }
 
+@each $color, $value in $theme-colors {
+  .fill-#{$color} {
+    fill: $value;
+  }
+  .stroke-#{$color} {
+    fill: $value;
+  }
+}
+
 .bg-white {
   background-color: $white !important;
 }
