--- a/src/assets/data-stack-icons/variables.scss
+++ b/src/assets/data-stack-icons/variables.scss
@@ -1,96 +1,102 @@
 $icomoon-font-family: "data-stack-icons" !default;
 $icomoon-font-path: "fonts" !default;
 
-$dsi-app-panel: "\e900";
-$dsi-user: "\e901";
-$dsi-nano-service: "\e902";
-$dsi-group: "\e903";
-$dsi-data-service: "\e904";
-$dsi-api-doc: "\e905";
-$dsi-library: "\e906";
-$dsi-bot: "\e907";
-$dsi-agent: "\e908";
-$dsi-function: "\e909";
-$dsi-bookmark: "\e90a";
-$dsi-flow: "\e90b";
-$dsi-insight: "\e90c";
-$dsi-notification-active-path1: "\e90d";
-$dsi-notification-active-path2: "\e90e";
-$dsi-notification-active-path3: "\e90f";
-$dsi-notification-active-path4: "\e910";
-$dsi-notification: "\e911";
-$dsi-stop: "\e912";
-$dsi-sort: "\e913";
-$dsi-pointer: "\e914";
-$dsi-file: "\e915";
-$dsi-collapse: "\e916";
-$dsi-expand: "\e917";
-$dsi-admin: "\e918";
-$dsi-join: "\e919";
-$dsi-redo: "\e91a";
-$dsi-undo: "\e91b";
-$dsi-align-left: "\e91c";
-$dsi-align-right: "\e91d";
-$dsi-save: "\e91e";
-$dsi-ban: "\e91f";
-$dsi-play: "\e920";
-$dsi-more-vertical: "\e921";
-$dsi-attach: "\e922";
-$dsi-refresh: "\e923";
-$dsi-map-pin: "\e924";
-$dsi-dollar-sign: "\e925";
-$dsi-filter-alt: "\e926";
-$dsi-cloud: "\e927";
-$dsi-skip-forward: "\e928";
-$dsi-more-vertical-6: "\e929";
-$dsi-remove: "\e92a";
-$dsi-branch: "\e92b";
-$dsi-calendar: "\e92c";
-$dsi-json: "\e92d";
-$dsi-hide: "\e92e";
-$dsi-done: "\e92f";
-$dsi-full-screen: "\e930";
-$dsi-upload: "\e931";
-$dsi-download: "\e932";
-$dsi-check: "\e933";
-$dsi-clock: "\e934";
-$dsi-mail: "\e935";
-$dsi-danger-circle: "\e936";
-$dsi-info-circle: "\e937";
-$dsi-logout: "\e938";
-$dsi-edit: "\e939";
-$dsi-copy: "\e93a";
-$dsi-arrow-left: "\e93b";
-$dsi-arrow-right: "\e93c";
-$dsi-view: "\e93d";
-$dsi-search: "\e93e";
-$dsi-minus: "\e93f";
-$dsi-drop-down-alt: "\e940";
-$dsi-trash: "\e941";
-$dsi-settings: "\e942";
-$dsi-close: "\e943";
-$dsi-plus: "\e944";
-$dsi-console: "\e945";
-$dsi-drop-down: "\e946";
-$dsi-drop-up: "\e947";
-$dsi-required-path1: "\e948";
-$dsi-required-path2: "\e949";
-$dsi-text: "\e94a";
-$dsi-boolean: "\e94b";
-$dsi-unique-path1: "\e94c";
-$dsi-unique-path2: "\e94d";
-$dsi-minus-circle: "\e94e";
-$dsi-create-only-path1: "\e94f";
-$dsi-create-only-path2: "\e950";
-$dsi-plus-circle: "\e951";
-$dsi-Profile: "\e952";
-$dsi-location: "\e953";
-$dsi-number: "\e954";
-$dsi-relation: "\e955";
-$dsi-array: "\e956";
-$dsi-object: "\e957";
-$dsi-file-text: "\e958";
-$dsi-library-alt: "\e959";
-$dsi-date: "\e95a";
-$dsi-id: "\e95b";
+$dsi-logs: "\e950";
+$dsi-mapping: "\e95e";
+$dsi-response: "\e95f";
+$dsi-connector: "\e960";
+$dsi-invoke_api: "\e961";
+$dsi-notification-active-path1: "\e94d";
+$dsi-notification-active-path2: "\e94e";
+$dsi-notification-active-path3: "\e94f";
+$dsi-minus-circle-fill: "\e900";
+$dsi-plus-circle-fill: "\e901";
+$dsi-id: "\e902";
+$dsi-date: "\e903";
+$dsi-library-alt: "\e904";
+$dsi-file-text: "\e905";
+$dsi-object: "\e906";
+$dsi-array: "\e907";
+$dsi-relation: "\e908";
+$dsi-number: "\e909";
+$dsi-location: "\e90a";
+$dsi-Profile: "\e90b";
+$dsi-plus-circle: "\e90c";
+$dsi-create-only-path1: "\e90d";
+$dsi-create-only-path2: "\e90e";
+$dsi-minus-circle: "\e90f";
+$dsi-unique-path1: "\e910";
+$dsi-unique-path2: "\e911";
+$dsi-boolean: "\e912";
+$dsi-text: "\e913";
+$dsi-required-path1: "\e914";
+$dsi-required-path2: "\e915";
+$dsi-drop-up: "\e916";
+$dsi-drop-down: "\e917";
+$dsi-console: "\e918";
+$dsi-plus: "\e919";
+$dsi-close: "\e91a";
+$dsi-settings: "\e91b";
+$dsi-trash: "\e91c";
+$dsi-drop-down-alt: "\e91d";
+$dsi-minus: "\e91e";
+$dsi-search: "\e91f";
+$dsi-view: "\e920";
+$dsi-arrow-right: "\e921";
+$dsi-arrow-left: "\e922";
+$dsi-copy: "\e923";
+$dsi-edit: "\e924";
+$dsi-logout: "\e925";
+$dsi-info-circle: "\e926";
+$dsi-danger-circle: "\e927";
+$dsi-mail: "\e928";
+$dsi-clock: "\e929";
+$dsi-check: "\e92a";
+$dsi-download: "\e92b";
+$dsi-upload: "\e92c";
+$dsi-full-screen: "\e92d";
+$dsi-done: "\e92e";
+$dsi-hide: "\e92f";
+$dsi-json: "\e930";
+$dsi-calendar: "\e931";
+$dsi-branch: "\e932";
+$dsi-remove: "\e933";
+$dsi-more-vertical-6: "\e934";
+$dsi-skip-forward: "\e935";
+$dsi-cloud: "\e936";
+$dsi-filter-alt: "\e937";
+$dsi-dollar-sign: "\e938";
+$dsi-map-pin: "\e939";
+$dsi-refresh: "\e93a";
+$dsi-attach: "\e93b";
+$dsi-more-vertical: "\e93c";
+$dsi-play: "\e93d";
+$dsi-ban: "\e93e";
+$dsi-save: "\e93f";
+$dsi-align-right: "\e940";
+$dsi-align-left: "\e941";
+$dsi-undo: "\e942";
+$dsi-redo: "\e943";
+$dsi-join: "\e944";
+$dsi-admin: "\e945";
+$dsi-expand: "\e946";
+$dsi-collapse: "\e947";
+$dsi-file: "\e948";
+$dsi-pointer: "\e949";
+$dsi-sort: "\e94a";
+$dsi-stop: "\e94b";
+$dsi-notification: "\e94c";
+$dsi-insight: "\e951";
+$dsi-flow: "\e952";
+$dsi-bookmark: "\e953";
+$dsi-function: "\e954";
+$dsi-agent: "\e955";
+$dsi-bot: "\e956";
+$dsi-library: "\e957";
+$dsi-api-doc: "\e958";
+$dsi-data-service: "\e959";
+$dsi-group: "\e95a";
+$dsi-nano-service: "\e95b";
+$dsi-user: "\e95c";
+$dsi-app-panel: "\e95d";
 
