--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,10 +30,10 @@ $odp-ui-author-warn: mat-palette($mat-red);
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
 $odp-ui-author-theme: mat-light-theme((color: (primary: $odp-ui-author-primary,
-      accent: $odp-ui-author-accent,
-      warn: $odp-ui-author-warn,
-    ),
-  ));
+        accent: $odp-ui-author-accent,
+        warn: $odp-ui-author-warn,
+      ),
+    ));
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
@@ -113,13 +113,13 @@ body {
 }
 
 $weights: 200,
-300,
-400,
-500,
-600,
-700,
-800,
-900;
+  300,
+  400,
+  500,
+  600,
+  700,
+  800,
+  900;
 
 @each $size in $weights {
   .fw-#{$size} {
@@ -649,7 +649,7 @@ $weights: 200,
 }
 
 .focus-accent:focus {
-  border-color: $accent !important;
+  border-color: $accent  !important;
   box-shadow: 0 0 0 0.2rem rgba($accent, 0.25) !important;
 }
 
@@ -668,7 +668,7 @@ $weights: 200,
 
   .form-control:not(.is-invalid):focus,
   .custom-select:not(.is-invalid):focus {
-    border-color: $accent !important;
+    border-color: $accent  !important;
     box-shadow: 0 0 0 0.2rem rgba($accent, 0.25) !important;
   }
 
@@ -803,14 +803,14 @@ $weights: 200,
 
   .ag-checkbox-input-wrapper.ag-checked::after {
     color: white !important;
-    background: $headings !important;
+    background: $headings  !important;
     border-radius: 4px;
   }
 }
 
 .custom-style {
   .ag-header {
-    background: $data-grid-header !important;
+    background: $data-grid-header  !important;
   }
 }
 
@@ -908,4 +908,36 @@ $weights: 200,
 
 .overflow-y-hidden {
   overflow-y: hidden;
+}
+
+
+
+.node-options-item {
+  .dsi-invoke-api {
+    color: #00CCCB;
+  }
+
+  .dsi-data-service {
+    color: #A94CFF;
+  }
+
+  .dsi-function {
+    color: #FFBB1A;
+  }
+
+  .dsi-connector {
+    color: #009BFF;
+  }
+
+  .dsi-logs {
+    color: #FF7D4C;
+  }
+
+  .dsi-mapping {
+    color: #FF4C82;
+  }
+
+  .dsi-response {
+    color: #2FC48F;
+  }
 }
