--- a/src/assets/scss/home.scss
+++ b/src/assets/scss/home.scss
@@ -92,14 +92,6 @@ input[type="number"]::-webkit-outer-spin-button {
   margin: 0;
 }
 
-.hover:hover {
-  cursor: pointer;
-
-  & * {
-    cursor: pointer;
-  }
-}
-
 .angle-img {
   background: url("../img/angle.png");
 }
@@ -338,6 +330,8 @@ input[type="number"]::-webkit-outer-spin-button {
 
 .btn-min-width {
   display: flex;
+  align-items: center;
+  justify-content: center;
   min-width: 140px;
   width: max-content;
 }
