--- a/src/app/home/b2b-flows-manage/node-properties/node-mapping/node-mapping.component.scss
+++ b/src/app/home/b2b-flows-manage/node-properties/node-mapping/node-mapping.component.scss
@@ -20,13 +20,37 @@
 
     .destination-fields {
         min-width: 460px;
+        width: 100%;
+    }
+
+    .field-block {
+        position: relative;
+        overflow: hidden;
+
+        .input-wrapper {
+            overflow: hidden;
+        }
+
+        .delete-btn {
+            position: absolute;
+            right: -100px;
+            transition: 0.2s;
+            z-index: 1;
+        }
+
+        &:hover {
+            .delete-btn {
+                right: 0px;
+            }
+        }
     }
 
     .formula-builder {
-        z-index: 1;
+        z-index: 2;
 
         textarea.form-control {
             font-family: monospace;
+            height: calc(100% - 144px);
         }
     }
 }
